--- a/src/momobackend/package.json
+++ b/src/momobackend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "set NODE_ENV=test PORT=3200 && mocha --timeout 10000 'test/**/*.test.js' --exit && nodemon ./bin/www",
+    "dev": "set NODE_ENV=development PORT=3200 && mocha --timeout 10000 'test/**/*.test.js' --exit && nodemon ./bin/www",
     "test": "set NODE_ENV=test PORT=3200 && mocha --timeout 10000 'test/**/*.test.js' --exit",
     "cov": "set NODE_ENV=test PORT=3200 && nyc mocha --timeout 10000 'test/**/*.test.js' --exit"
   },
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.3.1",
