--- a/docker-compose/dev/docker-compose.yml
+++ b/docker-compose/dev/docker-compose.yml
@@ -56,8 +56,10 @@ services:
     environment:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
       - REACT_APP_APP_URL=${REACT_APP_APP_URL}
-      - REACT_APP_CLIENT_ID=${REACT_APP_CLIENT_ID}
-      - REACT_APP_CLIENT_SECRET=${REACT_APP_CLIENT_SECRET}
+      - REACT_APP_GOOGLE_CLIENT_ID=${REACT_APP_GOOGLE_CLIENT_ID}
+      - REACT_APP_GOOGLE_CLIENT_SECRET=${REACT_APP_GOOGLE_CLIENT_SECRET}
+      - REACT_APP_YAHOO_CLIENT_ID=${REACT_APP_YAHOO_CLIENT_ID}
+      - REACT_APP_YAHOO_CLIENT_SECRET=${REACT_APP_YAHOO_CLIENT_SECRET}
       - TRAEFIK_APP_URL=${TRAEFIK_APP_URL}
     labels:
       - "traefik.enable=true"
