--- a/src/momobackend/.env
+++ b/src/momobackend/.env
@@ -3,7 +3,7 @@ WEB_APP_URL=http://localhost:3000
 
 
 #DB
-MYSQL_HOST=oracle.taitra.punwave.com
-MYSQL_USER=root
+MYSQL_HOST=localhost
+MYSQL_USER=huangge0513
 MYSQL_DATABASE=blog
 MYSQL_PASSWORD=rTxQ)9Sb#Tb-
